<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.access.AccessFragment">

    <RelativeLayout
        android:id="@+id/box2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/registrorapido" />


        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="INGRESA" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_centerHorizontal="true"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="AHORA" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="42dp"
            android:text="@string/paraInicial"
            android:textAlignment="center"
            android:textSize="16dp"
            android:textColor="@color/white" />




    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:background="@color/beige"
        android:layout_weight="1.2                             "
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/facebookBttn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@mipmap/btonfacebook"
            android:text="@string/facebook"
            android:visibility="gone"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/manualBttn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonSize"
            android:textSize="@dimen/text_size_question"
            android:background="@mipmap/btonmanual"
            android:text="@string/manual"
            android:layout_marginTop="5dp"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>