<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical"
    android:background="@color/beige"
    tools:context=".fragments.access.recuperarContraseña.Recuperar1Fragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/backBttn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="@color/transparente"
            android:scaleX="1.5"
            android:scaleY="2"
            android:src="@mipmap/flecha_izquierda"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp" />

        <ImageView
            android:id="@+id/circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:scaleType="centerCrop"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@mipmap/registro1" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="¿Has olvidado cómo\ningresar a esta Tierra?"
            android:textAlignment="center"
            android:textColor="@color/cafe2"
            android:textSize="@dimen/text_size_question" />


        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/space_btwn_questions"
            android:text="Recuérdanos tu correo electrónico"
            android:textAlignment="center"
            android:textColor="@color/cafe2"

            android:textSize="@dimen/text_size_question" />


        <TextView
            android:id="@+id/correoTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".5"
            android:gravity="bottom"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/space_btwn_questions"
            android:text="@string/pregunta_correo"
            android:textColor="@color/cafe2"

            android:textSize="@dimen/text_size_question" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/correoET"
                android:layout_width="0dp"
                android:layout_height="@dimen/question_heigh"
                android:layout_weight="1"
                android:background="@drawable/edittextstyle"
                android:hint="@string/ingresa_correo"
                android:inputType="textEmailAddress"
                android:layout_gravity="center_vertical"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:textColor="@color/cafe2"
                android:textCursorDrawable="@color/cafe2"
                android:textSize="@dimen/text_size_question" />

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:background="@mipmap/check"
                android:layout_marginLeft="5dp"
                android:visibility="invisible"/>

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:textAlignment="center"
            android:textColor="@color/cafe2"
            android:textSize="@dimen/comple_datos" />
    </LinearLayout>


    <Button
        android:id="@+id/nextBttn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/buttonSize"
        android:textSize="@dimen/text_size_question"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@mipmap/btonsiquiente"
        android:text="@string/siguiente"
        android:gravity="center"
        android:textColor="@color/beige"
        android:paddingLeft="25dp"
        android:layout_marginBottom="11dp"/>

</LinearLayout>